Add interface for Katalog
