# server/src/database/PlantTable.ts
@@ -1,6 +1,53 @@
 import * as CONFIG from "./config";
 import {TimePeriod} from "../model/TimePeriod";
 import {StatusError} from "../api/StatusError";
+import {PlantSummary} from "../model/PlantSummary";
+
+/**
+ * @summary Get the summary for a plant.
+ * @param {string} plant The plant for which the summary should be fetched.
+ */
+export function getPlantSummary(plant: string): Promise<PlantSummary> {
+    return new Promise<PlantSummary>((resolve, reject) => {
+        CONFIG.pool.query('SELECT ' +
+            'sow_period_begin, ' +
+            'harvest_period_end,' +
+            'sowing_distance, ' +
+            'sowing_depth, ' +
+            'soil_condition, ' +
+            'germination_time, ' +
+            'number_of_harvests, ' +
+            'difficulty ' +
+            'FROM plant_table WHERE plant_name = \'' + plant + '\'', (error, results) => {
+            if (error) {
+                reject(new StatusError(500, "Error accessing the DB", error.message));
+                return;
+            }
+
+            if (results.rows.length > 1) {
+                reject(new StatusError(500, "Error accessing the DB", "More than one plant was returned!"));
+                return;
+            }
+
+            if (results.rows.length == 0) {
+                reject(new StatusError(404, "Not found", "There is no plant called '" + plant + "'"));
+                return;
+            }
+
+            let row: any = results.rows[0];
+            resolve(new PlantSummary(
+                plant,
+                row.sowing_distance,
+                row.sowing_depth,
+                row.soil_condition,
+                row.germination_time,
+                row.number_of_harvests,
+                row.difficulty,
+                row.sow_period_begin,
+                row.harvest_period_end,));
+        });
+    });
+}
 
 
 /**
